edited by kirti

--- a/app/src/main/res/layout/activity_business_information_day.xml
+++ b/app/src/main/res/layout/activity_business_information_day.xml
@@ -873,12 +873,66 @@
 
             </RadioGroup>
 
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvDelivery"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/grpNoShow"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:drawableLeft="@drawable/drawable_green_dot"
+                android:drawablePadding="@dimen/_5sdp"
+                android:drawableRight="@drawable/help"
+                android:gravity="fill_vertical"
+                android:text="Assign Delivery to Delivery vendors"
+                android:textColor="@color/green"
+                app:edittextfont="Raleway-Bold.ttf" />
+
+            <RadioGroup
+                android:id="@+id/grpDelAssign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvDelivery"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:orientation="horizontal">
+
+                <com.yberry.dinehawaii.customview.CustomRadioButton
+                    android:id="@+id/rbdelAuto"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvReservation"
+                    android:buttonTint="@color/colorPrimary"
+                    android:text="Automatic"
+                    android:textColor="@color/gray"
+                    app:edittextfont="Raleway-Regular.ttf" />
+
+                <com.yberry.dinehawaii.customview.CustomRadioButton
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvReservation"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:layout_toRightOf="@+id/rbdelAuto"
+                    android:buttonTint="@color/colorPrimary"
+                    android:id="@+id/rbDelManual"
+                    android:checked="true"
+                    android:text="Manual"
+                    android:textColor="@color/gray"
+                    app:edittextfont="Raleway-Regular.ttf"
+
+                    />
+
+            </RadioGroup>
+
 
             <Button
                 android:id="@+id/btn_submit_days"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_35sdp"
-                android:layout_below="@id/grpNoShow"
+                android:layout_below="@id/grpDelAssign"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="@dimen/_10sdp"
                 android:background="@drawable/greenborder"
