--- a/app/src/main/res/layout/rec_list_item.xml
+++ b/app/src/main/res/layout/rec_list_item.xml
@@ -34,11 +34,29 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <android.support.v7.widget.CardView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_5sdp"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="5dp">
+
+                <ImageView
+                    android:id="@+id/restLogo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/logo_placeholder" />
+            </android.support.v7.widget.CardView>
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/mName"
                 style="@style/Base.TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
                 android:maxLines="2"
                 android:text="HAWAIII RESTAURANT"
                 android:textAlignment="center"
@@ -68,6 +86,7 @@
                 android:text="0 KM"
                 android:textAlignment="center"
                 android:textColor="#d5ffffff"
+                android:visibility="gone"
                 app:edittextfont="Raleway-Regular.ttf" />
 
             <RatingBar
@@ -79,7 +98,8 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:isIndicator="true"
                 android:numStars="5"
-                android:progressTint="#3aa161" />
+                android:progressTint="#3aa161"
+                android:visibility="gone" />
             <!--style="?android:attr/ratingBarStyleSmall"-->
         </LinearLayout>
     </LinearLayout>
