--- a/app/src/main/res/layout/business_list_item.xml
+++ b/app/src/main/res/layout/business_list_item.xml
@@ -104,7 +104,7 @@
                 android:background="@color/colorPrimary"
                 android:elevation="2dp"
                 android:gravity="center"
-                android:text="Disable"
+                android:text="Make Inactive"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/white" />
