--- a/app/src/main/res/menu/business_home_drawer.xml
+++ b/app/src/main/res/menu/business_home_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_my_business"
             android:icon="@drawable/drawer_icon"
-            android:title="My Business"
+            android:title="Manage Business"
             android:visible="false" />
         <item
             android:id="@+id/nav_e_gift"
@@ -40,6 +40,11 @@
             android:id="@+id/nav_orderhistory"
             android:icon="@drawable/drawer_icon"
             android:title="Reports" />
+        <item
+            android:id="@+id/nav_switch_business"
+            android:icon="@drawable/drawer_icon"
+            android:title="Switch to Main Business"
+            android:visible="false" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/drawer_icon"
